# mimir

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs  models.rs  server.rs  sessions.rs
