[package]
name = "mimir"
version = "0.1.0"
edition = "2024"
description = "MCP server for sharing session context between AI coding agents (Claude Code, Codex)"
license = "MIT"
repository = "https://github.com/iamngoni/mimir"

[dependencies]
# MCP
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system traversal
walkdir = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"
